--- a/startbootstrap-clean-blog-gh-pages/index.html
+++ b/startbootstrap-clean-blog-gh-pages/index.html
@@ -42,7 +42,7 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="file:///C:/Users/matth_000/Documents/matlhew-wong.github.io/matlhew-wong.github.io/index.html">Matthew Wong</a>
+                <a class="navbar-brand" href="../index.html">Matthew Wong</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
