--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a href="#projects">Projects</a>
                 </li>
                 <li>
-                    <a href="startbootstrap-clean-blog-gh-pages/index.html">Blog</a>
+                    <a href="https://missed-my-final.github.io/">Blog</a>
                 </li>
                 <li>
                     <a href="#contact">Contact Me</a>
@@ -128,11 +128,13 @@
                             <img src='website.png' title='Personal Website'
                                  style='float: left; padding-left: 10px;
                                         padding-right: 10px; padding-bottom: 10px;
-                                        padding-top: 10px' height="250px" width="250px">
+                                        padding-top: 10px' height="250" width="250">
                         </td>
                         <td>
                             <h3>
-                                Personal Website
+                                <a href="https://github.com/matlhew-wong/matlhew-wong.github.io">
+                                    Personal Website
+                                </a>
                             </h3>
                             <p>
                                 This is just a simple webpage written using
@@ -149,7 +151,9 @@
                         </td>
                         <td>
                             <h3>
-                                SuperPaint-v1.0
+                                <a href="https://github.com/matlhew-wong/super_paint_v2">
+                                    SuperPaint-v2.0
+                                </a>
                             </h3>
                             <p>
                                 Simple drawing program created with Java Swing
@@ -167,7 +171,9 @@
                         </td>
                         <td>
                             <h3>
-                                pyCentipede
+                                <a href="https://github.com/matlhew-wong/pyCentidpede">
+                                    pyCentipede
+                                </a>
                             </h3>
                             <p>
                                 This is a crude remake of the old school Atari
@@ -192,10 +198,9 @@
                             collect all my interests and share them with everyone. 
                             In addition, I'll try to post tips and tricks that I
                             learn from my experiences. May or may not be helpful. 
-                            Only time will tell
                         </p>
                         <p>
-                            <a href="startbootstrap-clean-blog-gh-pages/index.html">
+                            <a href="https://missed-my-final.github.io/">
                                 Blog
                             </a>
                         </p>
