--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         </td>
                         <td>
                             <h3>
-                                <a href="https://github.com/matlhew-wong/matlhew-wong.github.io">
+                                <a href="https://github.com/matlhew-wong/matlhew-wong.github.io" target="_blank">
                                     Personal Website
                                 </a>
                             </h3>
@@ -151,7 +151,7 @@
                         </td>
                         <td>
                             <h3>
-                                <a href="https://github.com/matlhew-wong/super_paint_v2">
+                                <a href="https://github.com/matlhew-wong/super_paint_v2" target="_blank">
                                     SuperPaint-v2.0
                                 </a>
                             </h3>
@@ -171,7 +171,7 @@
                         </td>
                         <td>
                             <h3>
-                                <a href="https://github.com/matlhew-wong/pyCentidpede">
+                                <a href="https://github.com/matlhew-wong/pyCentidpede" target='_blank'>
                                     pyCentipede
                                 </a>
                             </h3>
@@ -200,7 +200,7 @@
                             learn from my experiences. May or may not be helpful. 
                         </p>
                         <p>
-                            <a href="https://missed-my-final.github.io/">
+                            <a href="https://missed-my-final.github.io/" target='_blank'>
                                 Blog
                             </a>
                         </p>
@@ -221,15 +221,15 @@
                             following links.
                         </p>
                         <p style="text-align: right;">
-                            <a href="https://github.com/matlhew-wong">
+                            <a href="https://github.com/matlhew-wong" target="_blank">
                                 GitHub
                             </a>
                             <br>
-                            <a href='https://ca.linkedin.com/in/matlhew-wong'>
+                            <a href='https://ca.linkedin.com/in/matlhew-wong' target="_blank">
                                 LinkedIn
                             </a>
                             <br>
-                            <a href="matlhew.wong@gmail.com">
+                            <a href="matlhew.wong@gmail.com" target="_blank">
                                 Email
                             </a>
                             <br>
