--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a href="#projects">Projects</a>
                 </li>
                 <li>
-                    <a href="https://missed-my-final.github.io/">Blog</a>
+                    <a href="https://missed-my-final.github.io/" target="_blank">Blog</a>
                 </li>
                 <li>
                     <a href="#contact">Contact Me</a>
@@ -125,6 +125,7 @@
                 <table class="table">
                     <tr>
                         <td>
+                            <a href="https://github.com/matlhew-wong/matlhew-wong.github.io" target="_blank">
                             <img src='website.png' title='Personal Website'
                                  style='float: left; padding-left: 10px;
                                         padding-right: 10px; padding-bottom: 10px;
